deploy/openshift/fleetshift-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetshift-server
spec:
  selector:
    app: fleetshift-server
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 50051
      targetPort: 50051
      appProtocol: kubernetes.io/h2c
