deploy/openshift/fleetshift-server/route-grpc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grpc
spec:
  to:
    kind: Service
    name: fleetshift-server
  port:
    targetPort: grpc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
